tests/error/errors_on_usage/shadow_param.err
Error: Variable not defined (at $FILE:11:11)
   | 
 9 |     if b:
10 |         n = nat(42)
11 |     return n
   |            ^ `n` might be undefined ...
   | 
 9 |     if b:
   |        - ... if this expression is `False`

Guppy compilation failed due to 1 previous error
